--- a/index.html
+++ b/index.html
@@ -1,38 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
+  <title>Work Day Scheduler</title>
+</head>
+
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <div class="input-group row">
+      <span class="input-group-text hour">0900</span>
+      <textarea class="form-control" id="9" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1000</span>
+      <textarea class="form-control" id="10" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1100</span>
+      <textarea class="form-control" id="11" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1200</span>
+      <textarea class="form-control" id="12" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1300</span>
+      <textarea class="form-control" id="13" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1400</span>
+      <textarea class="form-control" id="14" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1500</span>
+      <textarea class="form-control" id="15" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1600</span>
+      <textarea class="form-control" id="16" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+    </div>
+    <div class="input-group row">
+      <span class="input-group-text hour">1700</span>
+      <textarea class="form-control" id="17" aria-label="With textarea"></textarea>
+      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./assets/script.js"></script>
+</body>
+
 </html>
