added ids to save buttons and got a handle on them in javascript

--- a/index.html
+++ b/index.html
@@ -24,47 +24,47 @@
     <div class="input-group row">
       <span class="input-group-text hour">0900</span>
       <textarea class="form-control" id="9" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn9" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1000</span>
       <textarea class="form-control" id="10" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn10" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1100</span>
       <textarea class="form-control" id="11" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn11" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1200</span>
       <textarea class="form-control" id="12" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn12" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1300</span>
       <textarea class="form-control" id="13" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn13" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1400</span>
       <textarea class="form-control" id="14" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn14" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1500</span>
       <textarea class="form-control" id="15" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn15" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1600</span>
       <textarea class="form-control" id="16" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn16" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
     <div class="input-group row">
       <span class="input-group-text hour">1700</span>
       <textarea class="form-control" id="17" aria-label="With textarea"></textarea>
-      <button class="btn btn-outline-secondary saveBtn" type="button">Save <i class="bi bi-save-fill"></i></button>
+      <button class="btn btn-outline-secondary saveBtn" id="savebtn17" type="button">Save <i class="bi bi-save-fill"></i></button>
     </div>
 
   </div>
